--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Default Light Theme */
 body {
-	font-family: Arial, sans-serif;
+	font-family: "Rockwell", "Roboto Slab", serif;
 	background-color: #f5f5f5;
 	color: #333;
 	margin: 0;
