--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-/* Default Light Theme */
+/* Default Green Theme */
 body {
 	font-family: "Rockwell", "Roboto Slab", serif;
-	background-color: #f5f5f5;
-	color: #333;
+	background-color: #008000;
+	color: #40e0d0;
 	margin: 0;
 	padding: 20px;
 }
@@ -23,8 +23,8 @@ button {
 	cursor: pointer;
 }
 
-/* Dark Theme */
+/* Blue Theme */
 body.dark {
-	background-color: #121212;
-	color: #f5f5f5;
+	background-color: #0000ff;
+	color: #800080;
 }
