Change theme color from green to red

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Default Green Theme */
+/* Default Red Theme */
 body {
 	font-family: "Rockwell", "Roboto Slab", serif;
 	background-color: #ff0000;
